0028744: Visualization, OpenGl_FrameBuffer missing GL_RGB8 format

Missing GL_RGB8 and GL_RGB formats added to getColorDataFormat function.