src/OpenGl/OpenGl_FrameBuffer.cxx
@@ -96,15 +96,17 @@ namespace
         return true;
       }
       case GL_RGBA8:
-      {
-        thePixelFormat = GL_RGBA;
-        theDataType    = GL_UNSIGNED_INT;
-        return true;
-      }
       case GL_RGBA:
       {
         thePixelFormat = GL_RGBA;
         theDataType    = GL_UNSIGNED_BYTE;
+        return true;
+      }
+      case GL_RGB8:
+      case GL_RGB:
+      {
+        thePixelFormat = GL_RGB;
+        theDataType = GL_UNSIGNED_BYTE;
         return true;
       }
     }
